--- a/tuxfootball.cbp
+++ b/tuxfootball.cbp
@@ -106,6 +106,14 @@
 		<Unit filename="src\menu\elements\menu\elements\menulabel.h" />
 		<Unit filename="src\menu\elements\menuoptionlist.cpp" />
 		<Unit filename="src\menu\elements\menuoptionlist.h" />
+		<Unit filename="src\resources\fontmanager.cpp" />
+		<Unit filename="src\resources\fontmanager.h" />
+		<Unit filename="src\resources\resourcemanager.cpp" />
+		<Unit filename="src\resources\resourcemanager.h" />
+		<Unit filename="src\resources\soundmanager.cpp" />
+		<Unit filename="src\resources\soundmanager.h" />
+		<Unit filename="src\resources\surfacemanager.cpp" />
+		<Unit filename="src\resources\surfacemanager.h" />
 		<Unit filename="src\SFont.h" />
 		<Unit filename="src\ball.cpp" />
 		<Unit filename="src\ball.h" />
@@ -116,8 +124,6 @@
 		<Unit filename="src\const.h" />
 		<Unit filename="src\controller.cpp" />
 		<Unit filename="src\controller.h" />
-		<Unit filename="src\fontmanager.cpp" />
-		<Unit filename="src\fontmanager.h" />
 		<Unit filename="src\gameengine.cpp" />
 		<Unit filename="src\gameengine.h" />
 		<Unit filename="src\graphics.cpp" />
@@ -133,18 +139,12 @@
 		<Unit filename="src\point3d.h" />
 		<Unit filename="src\rect.cpp" />
 		<Unit filename="src\rect.h" />
-		<Unit filename="src\resourcemanager.cpp" />
-		<Unit filename="src\resourcemanager.h" />
 		<Unit filename="src\segment.cpp" />
 		<Unit filename="src\segment.h" />
-		<Unit filename="src\soundmanager.cpp" />
-		<Unit filename="src\soundmanager.h" />
 		<Unit filename="src\spriteobject.cpp" />
 		<Unit filename="src\spriteobject.h" />
 		<Unit filename="src\spritesequence.cpp" />
 		<Unit filename="src\spritesequence.h" />
-		<Unit filename="src\surfacemanager.cpp" />
-		<Unit filename="src\surfacemanager.h" />
 		<Unit filename="src\team.cpp" />
 		<Unit filename="src\team.h" />
 		<Unit filename="src\tilemap.cpp" />
