Move rendering logic to the gamestates
This way the gameengine will delegate the rendering to the gamestates. This
also introduces a common hierarchie in the gamestate classes that will be used
for further rendering cleanups

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,7 @@ tuxfootball_SOURCES = \
 	gamestates/matchabortedstate.cpp \
 	gamestates/matchfinishedstate.cpp \
 	gamestates/matchstartstate.cpp \
+	gamestates/menustatebase.cpp \
 	gamestates/nationalanthemstate.cpp \
 	gamestates/penaltyshootoutstate.cpp \
 	gamestates/redefinekeysstate.cpp \
@@ -48,6 +49,7 @@ tuxfootball_SOURCES = \
 	gamestates/matchabortedstate.h \
 	gamestates/matchfinishedstate.h \
 	gamestates/matchstartstate.h \
+	gamestates/menustatebase.h \
 	gamestates/nationalanthemstate.h \
 	gamestates/penaltyshootoutstate.h \
 	gamestates/redefinekeysstate.h \
