Try to fix gettext

--- a/configure.ac
+++ b/configure.ac
@@ -15,11 +15,13 @@ AC_PROG_CXX
 AC_PROG_AWK
 AC_PROG_CC
 AC_PROG_CPP
+AM_PROG_CC_C_O
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_PROG_RANLIB
 IT_PROG_INTLTOOL([0.35.0])
+AM_GNU_GETTEXT([external])
 
 # Checks for libraries.
 PKG_CHECK_MODULES(SDL, [sdl >= 1.2.0])
