--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,8 @@
-## Process this file with automake to produce Makefile.in
-## Created by Anjuta
-
 SUBDIRS = src \
 	po \
 	data
+
+ACLOCAL_AMFLAGS = -I m4
 
 desktopdir = $(datadir)/applications
 desktop_in_files = tuxfootball.desktop.in
@@ -22,20 +21,39 @@ tuxfootballdoc_DATA = \
 	NEWS \
 	src/SFont-README
 
-INTLTOOL_FILES = intltool-extract.in \
-	intltool-merge.in \
-	intltool-update.in
-
 EXTRA_DIST = $(tuxfootballdoc_DATA) \
 	$(icon_DATA) \
 	$(desktop_DATA) \
-	$(data_DATA) \
-	$(INTLTOOL_FILES)
+	$(data_DATA) src/gettext.h
 
-DISTCLEANFILES = intltool-extract \
-	intltool-merge \
-	intltool-update \
-	po/.intltool-merge-cache
+check-gettext:
+	@if test x$(USE_NLS) != "xyes" ; then echo "Missing gettext. Rerun configure and check for" \
+	"'checking whether to use NLS... yes'!" ; exit 1 ; fi
+
+update-po: check-gettext
+	@find $(srcdir)/src/ -name "*.cpp" -print | sort > $(srcdir)/po/POTFILES.in.2 ; \
+	if diff $(srcdir)/po/POTFILES.in $(srcdir)/po/POTFILES.in.2 >/dev/null 2>&1 ; then \
+		rm -f $(srcdir)/po/POTFILES.in.2 ; \
+	else \
+		mv $(srcdir)/po/POTFILES.in.2 $(srcdir)/po/POTFILES.in ; \
+	fi
+	cd po && $(MAKE) $(AM_MAKEFLAGS) update-po
+
+update-gmo: check-gettext
+	cd po && $(MAKE) $(AM_MAKEFLAGS) update-gmo
+
+force-update-gmo: check-gettext
+	touch po/*.po
+	cd po && $(MAKE) $(AM_MAKEFLAGS) update-gmo
+
+force-update-gmo-%: check-gettext
+	@language=`echo $@ | sed s/force-update-gmo-//` ; \
+	if test ! -f po/$$language.po ; then echo "file po/$$language.po does not exist" ; exit 1 ; fi ; \
+	touch po/$$language.po ; \
+	cd po && $(MAKE) $(AM_MAKEFLAGS) update-gmo
+
+.PHONY: check-gettext update-po update-gmo force-update-gmo
+
 
 dist-hook:
 	@if test -d "$(srcdir)/.git"; \
@@ -54,5 +72,3 @@ dist-hook:
 # Remove doc directory on uninstall
 uninstall-local:
 	-rm -r $(tuxfootballdocdir)
-
-ACLOCAL_AMFLAGS = -I m4
