--- a/configure.ac
+++ b/configure.ac
@@ -1,14 +1,12 @@
-dnl Process this file with autoconf to produce a configure script.
-dnl Created by Anjuta application wizard.
-
 AC_PREREQ([2.67])
 AC_INIT([tuxfootball], [0.3.0], http://tuxfootball.sourceforge.net/)
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
+AC_CONFIG_SRCDIR([src/main.cpp])
+AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION, [dist-bzip2])
-AC_CONFIG_SRCDIR([config.h.in])
-AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE
+AM_GNU_GETTEXT([external])
 
 # Checks for programs.
 AC_PROG_CXX
@@ -20,8 +18,7 @@ AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_PROG_RANLIB
-IT_PROG_INTLTOOL([0.35.0])
-AM_GNU_GETTEXT([external])
+AC_PROG_LIBTOOL
 
 # Checks for libraries.
 PKG_CHECK_MODULES(SDL, [sdl >= 1.2.0])
@@ -49,20 +46,6 @@ AC_HEADER_STDBOOL
 # Checks for library functions.
 AC_CHECK_FUNCS([atexit pow sqrt])
 
-
-dnl ***************************************************************************
-dnl Internatinalization
-dnl ***************************************************************************
-GETTEXT_PACKAGE=tuxfootball
-AC_CHECK_HEADERS([libintl.h])
-AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
-AM_GLIB_GNU_GETTEXT
-dnl IT_PROG_INTLTOOL([0.35.0])
-
-
-
-AM_PROG_LIBTOOL
 
 AC_CONFIG_FILES([Makefile
                  tuxfootball.desktop
