Drop autotools and switch to cmake
Also drop support for multiple other build system (Code::Blocks, Visual Studio, Eclispe,
Anjuta) as well.

--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,20 @@
+# Backup and temporaty files
 .*swp
 *.bak
 *~
+
+# Built files or temporary buildsystem files
 *.a
 *.o
 *.la
 *.lo
-Makefile
-Makefile.in
-mkinstalldirs
-*.log
-config.guess
-config.h
-config.h.in
-config.status
-config.sub
-configure
-stamp-h*
-.deps
-aclocal.m4
-autom4te.cache
-.anjuta
-intltool-extract*
-intltool-merge*
-intltool-modules*
-intltool-update*
-POTFILES
 *.gmo
-stamp-it
-*.cache
-libtool
-ltmain.sh
-TODO.tasks
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+Makefile
+install_manifest.txt
+
+# Binary and runtime files
 tuxfootball
-.anjuta_sym_db.db
-*.tar.gz
-*.tar.bz2
-*.desktop
-lib
-bin
-tuxfootball.layout
-tuxfootball.depend
-include
+*.log
