Properly set up the PACKAGE_VERSION and PACKAGE_DATA_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,15 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 
 # Let's give our project a wonderful name
 project(tuxfootball CXX C)
-add_definitions( -DPACKAGE_NAME="${PROJECT_NAME}" )
+set(PROJECT_VERSION 0.3.90)
+add_definitions( -DPACKAGE_NAME="${PROJECT_NAME}" -DPACKAGE_VERSION="${PROJECT_VERSION}" -DPACKAGE_DATA_DIR="${CMAKE_INSTALL_PREFIX}/share/tuxfootball" )
 
 find_package(SDL2)
 find_package(SDL2_image)
 find_package(SDL2_mixer)
 find_package(Gettext)
 if (GETTEXT_FOUND)
-  add_definitions( -DENABLE_NLS=1 -DHAVE_GETTEXT=1 -DLOCALEDIR="po" ) # TODO this is wrong
+	add_definitions( -DENABLE_NLS=1 -DHAVE_GETTEXT=1 -DLOCALEDIR="${CMAKE_INSTALL_PREFIX}/share/locale" )
 endif (GETTEXT_FOUND)
 
 # Let's continue in the src-directory
@@ -23,7 +24,7 @@ add_subdirectory(data)
 
 # Build translations if gettext was found
 if (GETTEXT_FOUND)
-  add_subdirectory(po)
+	add_subdirectory(po)
 endif (GETTEXT_FOUND)
 
 install(FILES tuxfootball.desktop DESTINATION share/applications/)
