Fix generation of PO files in subdirectories

--- a/po/CMakeLists.txt
+++ b/po/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_program(GETTEXT_FIND_EXECUTABLE find)
 if(GETTEXT_FIND_EXECUTABLE)
   message(STATUS "Rebuilding POTFILES.in")
-  execute_process(COMMAND ${GETTEXT_FIND_EXECUTABLE} ./src -name "*.cpp" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} OUTPUT_FILE ${CMAKE_SOURCE_DIR}/po/POTFILES.in)
+  execute_process(COMMAND ${GETTEXT_FIND_EXECUTABLE} ${CMAKE_SOURCE_DIR}/src -name "*.cpp" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} OUTPUT_FILE ${CMAKE_SOURCE_DIR}/po/POTFILES.in)
 endif(GETTEXT_FIND_EXECUTABLE)
 
 find_program(GETTEXT_XGETTEXT_EXECUTABLE xgettext)
